[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/ui/settings/input_line.gd" type="Script" id=1]
[ext_resource path="res://scripts/translations/translated_button.gd" type="Script" id=2]
[ext_resource path="res://scripts/translations/translated_label.gd" type="Script" id=3]

[node name="InputLine" type="HBoxContainer"]
margin_right = 1024.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 40 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 9.0
margin_right = 727.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "name"
script = ExtResource( 3 )

[node name="Input" type="Button" parent="."]
margin_left = 731.0
margin_right = 931.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 0 )
text = "T"

[node name="Space" type="Control" parent="."]
margin_left = 935.0
margin_right = 955.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 0 )

[node name="Reset" type="Button" parent="."]
margin_left = 959.0
margin_right = 1024.0
margin_bottom = 40.0
size_flags_horizontal = 8
text = "RESET"
script = ExtResource( 2 )

[connection signal="pressed" from="Input" to="." method="_on_input_button_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_button_pressed"]
